<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_skills"
            android:icon="@drawable/ic_solution"
            android:title="@string/menu_skills" />
        <item
            android:id="@+id/nav_for_skills"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_for_skills" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_youtube"
            android:title="@string/menu_videos" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_government"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_profile" />
    </group>
</menu>
