<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="loginActivity"
            type="com.otpl.newcreate.ui.LoginActivity" />

        <variable
            name="loginModel"
            type="com.otpl.newcreate.data.model.local.LoginModel" />

        <variable
            name="loaderVisibility"
            type="Boolean" />

        <variable
            name="buttonVisibility"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="none"
            android:fillViewport="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_login_now"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black_800"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_4sdp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_login"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textSize="@dimen/_13sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black_500"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/_32sdp"
                    android:layout_marginRight="@dimen/_32sdp"
                    android:layout_marginTop="@dimen/_3sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:src="@mipmap/ic_logo"
                    android:layout_margin="@dimen/_20sdp"
                    android:layout_gravity="center"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/mobileNumberInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_11sdp"
                    android:layout_marginBottom="@dimen/_13sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobileNumberEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/prompt_registered_mobile_number"
                        android:text="@={loginModel.mobileNumber}"
                        android:textColor="@color/black_900"
                        android:textSize="@dimen/_14sdp"
                        android:inputType="number"
                        android:maxLength="10"
                        android:digits="1234567890"
                        android:imeOptions="actionNext"
                        android:textAppearance="@style/Widget.AppCompat.EditText"
                        android:fontFamily="@font/poppins_regular"
                        android:selectAllOnFocus="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/passwordInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/prompt_password"
                        android:text="@={loginModel.password}"
                        android:textAppearance="@style/Widget.AppCompat.EditText"
                        android:textColor="@color/black_900"
                        android:textSize="@dimen/_14sdp"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        android:fontFamily="@font/poppins_regular"
                        android:selectAllOnFocus="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/forgot_password_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/action_forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:onClick="@{loginActivity::onClickForgotPassword}" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_38sdp"
                    style="?android:attr/progressBarStyle"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:visibility="@{loaderVisibility ? View.VISIBLE : View.GONE}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:text="@string/action_login"
                    style="@style/ButtonStyle"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="@dimen/_15sdp"
                    android:gravity="center"
                    android:padding="@dimen/_13sdp"
                    android:textAllCaps="false"
                    app:cornerRadius="@dimen/_25sdp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:onClick="@{loginActivity::onClickLogin}"
                    android:visibility="@{buttonVisibility ? View.VISIBLE : View.GONE}" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:text="@string/action_create_new_account"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="@dimen/_15sdp"
                    android:gravity="center"
                    android:padding="@dimen/_7sdp"
                    android:textAllCaps="false"
                    app:cornerRadius="@dimen/_25sdp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:onClick="@{loginActivity::onClickSignUp}"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
