<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="forgotPasswordActivity"
            type="com.otpl.newcreate.ui.ForgotPasswordActivity" />

        <variable
            name="forgotPassword"
            type="com.otpl.newcreate.data.model.local.ForgotPassword" />

        <variable
            name="toolbarTitle"
            type="String" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.password.forgot.ForgotPasswordActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@{toolbarTitle}"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:background="@color/white">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/view_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:fillViewport="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_130sdp"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/_24sdp"
                        android:layout_marginBottom="@dimen/_15sdp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_chat" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Title"
                            android:text="@string/label_email_verification"
                            android:fontFamily="@font/poppins_medium"
                            android:textSize="@dimen/_17sdp"
                            android:textColor="@color/black_900"
                            android:gravity="center"
                            android:layout_marginTop="@dimen/_16sdp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Title"
                            android:text="@string/msg_enter_email_for_verification"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="@dimen/_12sdp"
                            android:textColor="@color/black_600"
                            android:gravity="center"
                            android:layout_marginTop="@dimen/_16sdp"
                            android:layout_marginLeft="@dimen/_30sdp"
                            android:layout_marginRight="@dimen/_30sdp"
                            android:layout_marginBottom="@dimen/_13sdp"/>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:id="@+id/mobileNumberInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_30sdp"
                            android:layout_marginEnd="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_16sdp"
                            android:layout_marginBottom="@dimen/_7sdp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/mobileNumberEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:hint="@string/prompt_registered_mobile_number"
                                android:text="@={forgotPassword.mobileNumber}"
                                android:textColor="@color/black_900"
                                android:textSize="@dimen/_13sdp"
                                android:inputType="number"
                                android:maxLength="10"
                                android:digits="1234567890"
                                android:imeOptions="actionDone"
                                android:textAppearance="@style/Widget.AppCompat.EditText"
                                android:fontFamily="@font/poppins_regular"
                                android:selectAllOnFocus="true"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/getCodeButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:layout_marginBottom="@dimen/_20sdp"
                            android:layout_marginLeft="@dimen/_30sdp"
                            android:layout_marginRight="@dimen/_30sdp"
                            android:text="@string/action_get_code"
                            style="@style/ButtonStyle"
                            android:textColor="@color/white"
                            android:fontFamily="@font/googlesans_bold"
                            android:textSize="@dimen/_15sdp"
                            android:gravity="center"
                            android:padding="@dimen/_13sdp"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Button"
                            android:onClick="@{forgotPasswordActivity::onClickRequestOTP}"/>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/otpLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:id="@+id/otpInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_30sdp"
                                android:layout_marginEnd="@dimen/_30sdp"
                                android:layout_marginTop="@dimen/_11sdp"
                                android:layout_marginBottom="@dimen/_11sdp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/otpEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:singleLine="true"
                                    android:hint="@string/prompt_otp"
                                    android:text="@={forgotPassword.otp}"
                                    android:textColor="@color/black_900"
                                    android:textSize="@dimen/_13sdp"
                                    android:inputType="number"
                                    android:maxLength="6"
                                    android:digits="1234567890"
                                    android:imeOptions="actionDone"
                                    android:textAppearance="@style/Widget.AppCompat.EditText"
                                    android:fontFamily="@font/googlesans_regular"
                                    android:selectAllOnFocus="true"/>

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.button.MaterialButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_12sdp"
                                android:layout_marginBottom="@dimen/_20sdp"
                                android:layout_marginLeft="@dimen/_30sdp"
                                android:layout_marginRight="@dimen/_30sdp"
                                android:text="@string/action_submit"
                                style="@style/ButtonStyle"
                                android:textColor="@color/white"
                                android:fontFamily="@font/googlesans_bold"
                                android:textSize="@dimen/_15sdp"
                                android:gravity="center"
                                android:padding="@dimen/_13sdp"
                                android:textAllCaps="false"
                                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                                android:onClick="@{forgotPasswordActivity::onClickVerifyOTP}"/>

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.core.widget.NestedScrollView>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_38sdp"
                android:layout_height="@dimen/_38sdp"
                style="?android:attr/progressBarStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
